# the_pipeline_creators

./: .gitignore  README.md  pyproject.toml
inputs/raw/: ETL_Agreement.csv
outputs/: CODE_REVIEW.md  pipeline_dados.py  pipeline_design.md  test_pipeline.py
src/the_pipeline_creators/: crew.py  main.py
src/the_pipeline_creators/config/: agents.yaml  tasks.yaml
src/the_pipeline_creators/tools/: custom_tool.py
src/the_pipeline_creators/utils/: indexar_base_conhecimento.py
